style.css
/* ... */
.wrong { border-color: var(--error-color); animation: shake 0.3s; }

.errors-panel {
    color:#afafaf;
    padding-left: 8px;
    background: #f9f9f9;
    font-weight:bold;
    border: 1px solid var(--border-color);
    margin-bottom: 10px;
    margin-top: 10px;
    border-radius: 5px;
    width: 100%;
    max-width: 100%;
    box-sizing: border-box;
}

.hint-panel {
    margin: 20px 0;
    min-height: 3em;
    background: #f9f9f9;
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid var(--border-color);
    font-style: italic;
    color: #888;
}

#dictToggleBtn { color: var(--primary-color); font-weight: bold; }

#accuracyStat {
  font-size: 3rem;
  color: var(--primary-color);
  font-weight: bold;
  margin-bottom: 15px;
}

#nextGameBtn {padding:15px 40px; }

.actionBtn {
  background:var(--primary-color);
  color:white;
  border:none;
  margin-bottom: 20px;
  border-radius: 15px;
  cursor: pointer;
  font-weight: bold;
  font-size: larger;
  padding: 15px 15px;
}

.sent-words {
    background: var(--primary-background);
    border: 1px solid var(--border-color);
    border-radius: 15px;
    padding: 15px 30px;
    margin-bottom: 20px;
    font-size: 1.8rem;
    min-height: 80px;	
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
}

.sent-word {
    display: inline-block;
    user-select: none;
    background: var(--primary-background);
    border: 2px solid var(--light-border-color);
    border-bottom: 4px solid var(--light-border-color);
    border-radius: 12px;
    max-height: 2.5rem;
    padding: 5px;
    margin: 5px;
    cursor: pointer;
}

.sent-word-used {
    background: var(--light-border-color);
    color: var(--light-border-color);
    cursor: default;
}

.question-card {
    background: #f8f9fa;
    border: 1px solid var(--border-color);
    border-radius: 15px;
    padding: 15px 20px;
    margin-bottom: 20px;
    text-align: center;
    min-height: 120px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.options-grid {
    display: grid;
    grid-template-columns: 1fr 1fr; /* 2x2 для планшетов */
    gap: 15px;
}

@media (max-width: 500px) {
    .options-grid {
       grid-template-columns: 1fr;
       justify-items: center;
    }
    .quiz-card {
       min-width: 80vw;
    }
}

#dictionaryList {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    gap: 15px;
}

#screen-dictionary{
    height: 100vh !important; 
    overflow-y: auto !important;
    padding-bottom: 50px;
}

.dictionaryCard {
  display: block;
  justify-content: space-between;
  align-items: center;
  padding: 15px;
  background: white;
  border: 1px solid var(--border-color);
  border-radius: 15px;
  cursor: pointer;
}

.dictionaryTransl {
  font-size: 1.1em; 
  color: #333; 
  margin-top: 4px;
}

.transcription {
    color: #666;
    font-style: italic;
}

.transcription.hidden {
    visibility: hidden;
    opacity: 0;
    pointer-events: none;
}

.nav-controls {
    display: flex;
    justify-content: space-between;
    gap: 10px;
}

.nav-arrow {
    flex: 1;
    padding: 8px;
    border: 1px solid #ddd;
    border-radius: 6px;
    background: white;
    cursor: pointer;
    font-size: 0.85rem;
}

.exercise-path {
    list-style: none;
    padding-bottom: 20px;
    display: flex;
    flex-direction: column;
    padding-inline-start: 0px;
    align-items: center;
}

.exercise-node {
    display: flex;
    align-items: center;
    gap: 15px;
    padding: 10px;
    width: 80%;
    border-bottom: 2px dashed #ccc; /* delimiter */
    cursor: pointer;
    transition: 0.3s;
}

.exercise-node:hover {
    background: #f0f0f0;
    transform: scale(1.02);
}

.node-icon {
    width: 35px;
    height: 35px;
    background: var(--primary);
    color: white;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
}

.exercise-node.current {
    background: #fff;
    border: 2px solid var(--primary);
    transform: scale(1.1);
    /*box-shadow: 0 4px 10px var(--primary);*/
}

.exercise-node.current .node-icon {
    background: var(--primary);
    animation: pulse 2s infinite;
}

@keyframes pulse {
0%   { box-shadow: 0 0 0 0 rgba(var(--primary-rgb), 0.7); }
70%  { box-shadow: 0 0 0 10px rgba(var(--primary-rgb), 0); }
100% { box-shadow: 0 0 0 0 rgba(var(--primary-rgb), 0); }
}


.drawer {
    display: flex;
    flex-direction: column;
    position: fixed; 
    left: calc(-1 * var(--drawer-width));
    top: 0; 
    width: var(--drawer-width); 
    height: 100%;
    background: white; 
    z-index: 1001; 
    transition: left 0.3s ease;
    padding: 10px;
    box-shadow: 5px 0 15px rgba(0,0,0,0.2);
    box-sizing: border-box;
}

.drawer-header {
    display: flex;
    flex-direction: column;
    background: #f8f9fa;
    border-bottom: 1px solid #ddd;
}

.drawer-title {
    position: relative;
    padding: 15px;
}

.title-row {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 10px;
}

#currentTopicName {
    margin: 0;
    font-size: 1.1rem;
    padding-right: 10px;
    padding-top: 7px;
    padding-left: 20px;
    flex: 1;
    white-space: nowrap;
    overflow: hidden;
}

.topic-stats {
    /* display: flex; */
    gap: 15px;
    margin-top: 8px;
    padding-top: 8px;
    border-top: 1px solid rgba(var(--primary-rgb), 0.1);
    font-size: 0.85rem;
    color: #666;
}

.stat-value {
    font-weight: bold;
    color: var(--primary);
    margin-left: 4px;
}

.results-stats {
    width: 100%;
    padding-left: 30px;
    padding-right: 40px;
}

.title-actions {
    display: flex;
    gap: 5px;
    z-index: 10;
}

.icon-btn {
    background: none;
    border: 1px solid transparent;
    font-size: 1.2rem;
    cursor: pointer;
    color: #666;
    padding: 4px 8px;
    border-radius: 4px;
    transition: all 0.2s;
}
/* ... */

